@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940527
+MANIFEST for ded, version t19940529
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
